# mcp-obsidian

./: README.md  all_files.txt  pyproject.toml
src/mcp_obsidian/: access_guard.py  obsidian.py  runtime_config.py
